# monochrom

./: .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  ai.just  catalog-v001.xml  chr-base.json  chr-base.obo  chr-base.owl  chr-full.json  chr-full.obo  chr-full.owl  chr.json  chr.obo  chr.owl  genomes.yaml  index.html  issue_template.md  mkdocs.yml  project.yaml  pyproject.toml  requirements.txt  search.html  sitemap.xml  species.yaml
AutosomeVsSexChromosome/: index.html
ChromatinType/: index.html
ChromosomePart/: index.html
ChromosomePartCollection/: index.html
ChromosomePart_id/: index.html
EntityType/: index.html
Genome/: index.html
GenomeBuild/: index.html
GenomeBuild_id/: index.html
Genome_build/: index.html
Genome_id/: index.html
Genome_name/: index.html
LocationType/: index.html
OrganismTaxon/: index.html
SexChromosomeType/: index.html
band_descriptor/: index.html
broad_synonyms/: index.html
cell_location/: index.html
children/: index.html
chromosomePartCollection__genomes/: index.html
chromosomePartCollection__has/: index.html
chromosomePartCollection__name/: index.html
chromosomePartCollection__taxons/: index.html
chromosome_name/: index.html
chromosome_type/: index.html
common_name/: index.html
components/: calJac4.owl  calJac4.yaml  ce11.owl  ce11.yaml  danRer10.yaml  danRer11.owl  danRer11.yaml  galGal6.owl  galGal6.yaml  hg38.owl  hg38.yaml  mm10.owl  mm10.yaml  mm39.owl  mm39.yaml  rn6.owl  rn6.yaml
download/: README.md
download_url/: index.html
end/: index.html
(+94 files in other folders)
